--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </head>
 
 <body>
+    <h1 class="sr-only"></h1>
     <main>
         <div class="one padding-class">
-            <img src="media/icon-sedans.svg" alt="SEDANS image">
+            <img src="media/icon-sedans.svg" alt="" aria-hidden="true">
             <h2>SEDANS</h2>
             <p> Choose a sedan for its <br> affordability and excellent <br> fuel economy. Ideal for <br> cruising in
                 the city or on <br> your next road
@@ -31,7 +32,7 @@
             <a href="#" class="padding-class" style="color: hsl(31, 77%, 52%);"> Learn More </a>
         </div>
         <div class="two padding-class">
-            <img src="media/icon-suvs.svg" alt="SUVS image">
+            <img src="media/icon-suvs.svg" alt="" aria-hidden="true">
             <h2>SUVS</h2>
             <p>Take an SUV for its spacious <br> interior, power, and <br> versatility. Perfect for your <br> next
                 family vacation
@@ -43,7 +44,7 @@
 
         </div>
         <div class="three padding-class">
-            <img src="media/icon-luxury.svg" alt="LUXURY image">
+            <img src="media/icon-luxury.svg" alt="" aria-hidden="true">
             <h2>LUXURY</h2>
             <p>Cruise in the best car brands <br> without the bloated prices. <br> Enjoy the enhanced comfort <br> of a
                 luxury rental
